kubernetes/apps/base/authtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authtest
  template:
    metadata:
      labels:
        app: authtest
    spec:
      containers:
        - name: whoami
          image: docker.io/traefik/whoami:v1.10.7
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
