kubernetes/apps/base/authtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authtest
spec:
  selector:
    app: authtest
  ports:
    - name: http
      port: 80
      targetPort: 80
