kubernetes/apps/base/authtest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authtest
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
  hostnames:
    - "authtest.${COMMON_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: authtest
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
